components/konflux-support-ops-dashboard/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-ops-dashboard
  namespace: konflux-support-ops-dashboard
  labels:
    app: support-ops-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-ops-dashboard
  template:
    metadata:
      labels:
        app: support-ops-dashboard
    spec:
      volumes:
        - name: tls-certs
          secret:
            secretName: support-ops-dashboard-tls
      containers:
        - name: dashboard
          image: quay.io/redhat-user-workloads/konflux-user-support-tenant/chat-bot/user-support@sha256:a41895a45ec95393e09c994bec1462bd6989c09df48dd3b7533175ab5057e471
          imagePullPolicy: Always
          command:
            - python
          args:
            - cmds/weekly_support_dashboard.py
          ports:
            - name: https
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/tls
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
