components/konflux-support-ops-dashboard/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: support-ops-dashboard
  labels:
    app: support-ops-dashboard
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: support-ops-dashboard
